[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconx"
version = "1.0.0"
authors = [
    {name = "NullSpecter", email = "nullspecter@example.com"}
]
description = "أداة Recon شاملة ومتقدمة لجمع المعلومات واكتشاف الـ Subdomains"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.24.0",
    "dnspython>=2.4.0",
    "aiodns>=2.0.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.6",
    "colorama>=0.4.6",
    "tqdm>=4.65.0",
]

[project.urls]
"Homepage" = "https://github.com/nullspecter/reconx"
"Bug Tracker" = "https://github.com/nullspecter/reconx/issues"

[project.scripts]
reconx = "reconx.cli:app"